# SpectrumLab

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  conftest.py  install_dev.py  pyproject.toml  run_ablation_experiments.py  run_evaluation.py  setup.py  test_import.py
.github/workflows/: deploy.yml  docs-deploy.yml  publish-to-pypi.yml  test-publish.yml
deepspectrum/cli/: __init__.py  main.py
deepspectrum/evaluator/: choice_evaluator.py
deepspectrum/models/: deepseek_api.py  gpt4o_api.py
docs/: README.md  index.md  package-lock.json  pnpm-lock.yaml
docs/.vitepress/: config.mts  en.ts  zh.ts
docs/en/: api.md  benchmark.md  index.md  quick-start.md  tutorial.md
docs/zh/: api.md  benchmark.md  getting-started.md  index.md  tutorial.md
leaderboard/: leaderboard.json
leaderboard/gradio/: app.py
leaderboard/vue/: package-lock.json
specbench/benchmark/: base.py  generation_group.py  perception_group.py  semantic_group.py  signal_group.py
specbench/config/: base_config.py
specbench/evaluator/: __init__.py  base.py  choice_evaluator.py
specbench/models/: __init__.py  base.py  base_api.py  deepseek_api.py  gpt4o_api.py  internvl_api.py
specbench/utils/: __init__.py  image_utils.py
spectrumlab/: __init__.py
spectrumlab/config/: base_config.py
spectrumlab/evaluator/: base.py  choice_evaluator.py
spectrumlab/models/: __init__.py  claude_api.py  gemini_api.py  gpt4_v_api.py  internvl_api.py  llama_api.py  qwen_vl_api.py
tests/: conftest.py  test_import.py
tests/models/: test_claude_haiku_3_5.py  test_claude_opus_4.py  (+18 more)
