[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specbench"
version = "0.0.1"
description = "化学谱学大模型 Benchmark 引擎"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Zhuo Yang, Tianfan Fu" }]
keywords = ["benchmark", "chemistry", "spectroscopy", "evaluation"]

dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.93.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
specbench = "specbench.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["specbench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = ["black>=25.1.0", "pytest>=8.4.1", "ruff>=0.1.0"]
